Frontend/src/app/components/sidebar/Sidebar.module.scss
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");

.menu {
  font-family: "Poppins", sans-serif;
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 250px;
  background: linear-gradient(180deg, #4E3182 0%, #4E3182 100%);
  color: #fff;
  display: flex;
  flex-direction: column;
  overflow-y: auto;
  padding: 1rem;
  gap: 2rem;
  box-shadow: 2px 0 12px rgba(0, 0, 0, 0.1);
  z-index: 10;
  transition: all 0.3s ease;

  @media (max-width: 768px) {
    width: 200px;
  }

  @media (max-width: 480px) {
    width: 100%;
    height: auto;
    position: relative;
    flex-direction: row;
    gap: 1rem;
    padding: 0.5rem;
  }
}

.logo {
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 15px;
  font-weight: 700;
  font-size: 18px;
  color: #fff;
  text-transform: uppercase;
  letter-spacing: 1px;
}

.icon {
  font-size: 22px;
  transition: transform 0.3s ease;
}

.menuList {
  display: flex;
  flex-direction: column;
  gap: 12px;

  @media (max-width: 480px) {
    flex-direction: row;
    gap: 10px;
    overflow-x: auto;
    padding: 0 0.5rem;
  }
}

.item {
  display: flex;
  align-items: center;
  gap: 15px;
  font-size: 1.1rem;
  font-weight: 600;
  padding: 12px 10px;
  border-radius: 12px;
  color: #F5F7FA;
  text-decoration: none;
  cursor: pointer;
  transition: all 0.3s ease;

  &:hover {
    background: #F5F7FA;
    color: #4E3182;
    transform: translateX(5px);
    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
  }
}

.dropdown {
  display: flex;
  flex-direction: column;
  margin-left: 1rem;
  gap: 0.5rem;
  padding-left: 0.5rem;
  border-left: 2px solid rgba(255, 255, 255, 0.2);
}

.subItem {
  display: flex;
  align-items: center;
  gap: 10px;
  font-size: 1rem;
  font-weight: 500;
  padding: 8px 10px;
  border-radius: 8px;
  color: #dde6ed;
  cursor: pointer;
  transition: all 0.3s ease;

  &:hover {
    background: rgba(255,255,255,0.1);
    color: #fff;
    transform: translateX(3px);
  }
}


.menu::-webkit-scrollbar {
  width: 6px;
}

.menu::-webkit-scrollbar-track {
  background: transparent;
}

.menu::-webkit-scrollbar-thumb {
  background: rgba(255, 255, 255, 0.3);
  border-radius: 3px;
}

.menu::-webkit-scrollbar-thumb:hover {
  background: rgba(255, 255, 255, 0.5);
}

